force-app/main/default/objects/Rendering_Criteria__c/Rendering_Criteria__c.object-meta.xml
<CustomObject>
    <label>Rendering Criteria</label>
    <nameField>
        <displayFormat>RCN-{0000}</displayFormat>
        <label>Rendering Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rendering Criterias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>