force-app/main/default/objects/Rendering_Criteria__c/fields/Associated_Value__c.field-meta.xml
<CustomField>
    <fullName>Associated_Value__c</fullName>
    <description>Specify the value, if multiple values required mention them in newlines</description>
    <label>Associated Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>