force-app/main/default/objects/Rendering_Criteria__c/fields/Dependent_Expression__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Expression__c</fullName>
    <inlineHelpText>This field should be in this format &quot;First_field_name - Second_field_name &gt; 60&quot;. First operator should be arithmetic and Second operator should be logical. Data type can only be of decimal, number or date type.</inlineHelpText>
    <label>Dependent Expression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>