force-app/main/default/objects/Rendering_Criteria__c/fields/Dependent_field_is_from_other_object__c.field-meta.xml
<CustomField>
    <fullName>Dependent_field_is_from_other_object__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dependent field is from other object</label>
    <type>Checkbox</type>
</CustomField>