force-app/main/default/objects/Rendering_Criteria__c/fields/Dependent_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Field_Name__c</fullName>
    <label>Dependent Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>