force-app/main/default/objects/Rendering_Criteria__c/fields/Dependent_Object_name__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Object_name__c</fullName>
    <label>Dependent Object name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>