force-app/main/default/objects/Rendering_Criteria__c/fields/Is_dependent__c.field-meta.xml
<CustomField>
    <fullName>Is_dependent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is dependent</label>
    <type>Checkbox</type>
</CustomField>