force-app/main/default/objects/Rendering_Criteria__c/fields/Matching_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Matching_Type_c__c</fullName>
    <label>Matching Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;</fullName>
            </value>
            <value>
                <fullName>&gt;</fullName>
            </value>
            <value>
                <fullName>&lt;=</fullName>
            </value>
            <value>
                <fullName>&gt;=</fullName>
            </value>
            <value>
                <fullName>==</fullName>
            </value>
            <value>
                <fullName>!=</fullName>
            </value>
            <value>
                <fullName>IN</fullName>
            </value>
            <value>
                <fullName>NOT IN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>