force-app/main/default/objects/Rendering_Criteria__c/fields/Matching_with_current_system_date__c.field-meta.xml
<CustomField>
    <fullName>Matching_with_current_system_date__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If matching with current system date then replace the field name in the dependent expression to CurrentSystemDate</inlineHelpText>
    <label>Matching with current system date</label>
    <type>Checkbox</type>
</CustomField>