force-app/main/default/objects/Rendering_Criteria__c/fields/Related_Field__c.field-meta.xml
<CustomField>
    <fullName>Related_Field__c</fullName>
    <label>Controlling Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>