force-app/main/default/objects/Rendering_Criteria__c/fields/Rendered_Field__c.field-meta.xml
<CustomField>
    <fullName>Rendered_Field__c</fullName>
    <label>Rendered Field</label>
    <referenceTo>Rendered_Field__c</referenceTo>
    <relationshipLabel>Rendering Criterias</relationshipLabel>
    <relationshipName>Rendering_Criterias</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>